@@ -5,7 +5,7 @@ Title: pQTL Tools
 Author: Jing Hua Zhao
 Maintainer: Jing hua Zhao <jinghuazhao@hotmail.com>
 Depends: R (>= 3.5.0)
-Imports: dplyr, TwoSampleMR
+Imports: coloc, dplyr, TwoSampleMR
 Suggests: biomaRt, gap, circlize, knitr, karyoploteR, openxlsx, phenoscanner,
           purrr, regioneR, reticulate, seqminer, GenomicRanges, IRanges
 LazyData: Yes
