@@ -1,5 +1,6 @@
-export(genequeries,regionqueries,snpqueries,import_eQTLCatalogue,pqtlMR,uniprot2ids)
+export(genequeries,regionqueries,snpqueries,import_eQTLCatalogue,pqtlMR,run_coloc,uniprot2ids)
 import(dplyr,utils)
+importFrom("coloc","coloc.abf")
 importFrom("graphics", "abline", "arrows", "axis", "box", "identify",
            "legend", "lines", "mtext", "par", "plot", "points",
            "segments", "text")
